Breaking changes: spec v2 (#981)
* bump major version

* validate snippet (#984)

* validate tags (#985)

* restrict ids (#986)

* ET-4575 validate properties (#982)

* validate properties

* review comments

* set limit to 2.5KB

* remove min_similarity (#987)

* ET-4628 move candidates endpoint (#989)

* move candidates endpoint

* add deprecation header

* add spec changelog

* don't clip document count silently (#991)

* add date to changelog

* ET-4632 only include properties if requested (#990)

* only include properties if requested

* review comments

* cleanup spec
